--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,18 @@ buildscript {
     }
 }
 
+plugins {
+  id "org.sonarqube" version "3.1.1"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "dbo1001_UBU-TFG-flutter_serpiente"
+    property "sonar.organization", "dbo1001"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+
 allprojects {
     repositories {
         google()
