--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,5 +9,8 @@ sonar.projectVersion=1.0
 sonar.sources=android/app/
 sonar.dart.binaries=lib/,android/app/
 
+# Use existing options to perform dartanalyzer analysis
+sonar.dart.analysis.useExistingOptions=true
+
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
