--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=UBU-TFG-flutter_serpiente
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=android/app/
+sonar.sources=.
 sonar.dart.binaries=lib/,android/app/
 
 # Use existing options to perform dartanalyzer analysis
